--- a/application.yaml
+++ b/application.yaml
@@ -12,3 +12,10 @@ habeebcycle:
     k8s:
         service1:
             link: http://k8s-service1
+            
+com:
+  habeebcycle:
+    developer:
+      name: Habeeb Okunade
+      email: habeebcycle@gmail.com
+      phone: +234-803-835-0075
